<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="32dp"
    android:backgroundTint="@color/white"
    android:background="@drawable/fill_button">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="32dp">

        <ProgressBar
            android:id="@+id/login_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/d_centerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <EditText
                android:id="@+id/d_txtPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:drawableLeft="@drawable/ic_password"
                android:hint="  Insert password"
                android:inputType="textPassword"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/d_txtEmail" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/centerLayout"
                app:srcCompat="@drawable/ic_paypal" />

            <EditText
                android:id="@+id/d_txtEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:drawableLeft="@drawable/ic_email"
                android:hint="  Insert email"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <Button
                android:id="@+id/d_btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_weight="1"
                android:background="@drawable/fill_button"
                android:fontFamily="@font/robo_regular"
                android:text="Login PayPal"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18dp"
                app:layout_constraintTop_toBottomOf="@+id/d_txtPassword" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>