<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="32dp"
    android:backgroundTint="@color/white"
    android:background="@drawable/fill_button">

    <TextView
        android:id="@+id/lblBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robo_regular"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:text="Your Balance:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/d_txtBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/robo_medium"
        android:textColor="@color/black"
        android:textSize="48dp"
        android:text="€ 57,69"
        app:layout_constraintEnd_toEndOf="@+id/lblBalance"
        app:layout_constraintStart_toStartOf="@+id/lblBalance"
        app:layout_constraintTop_toBottomOf="@+id/lblBalance" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/d_txtBalance"
        app:layout_constraintStart_toStartOf="@+id/d_txtBalance"
        app:layout_constraintTop_toBottomOf="@+id/d_txtBalance">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/robo_regular"
            android:text="Send to"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/txtSendTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/robo_regular"
            android:text="Mark"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/txtShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/robo_bold"
            android:text="€ 18,50"
            android:textColor="@color/black"
            android:textSize="18dp" />

    </LinearLayout>

    <Button
        android:id="@+id/d_btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:background="@drawable/fill_button"
        android:fontFamily="@font/robo_regular"
        android:text="Send Money"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>