...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="24dp">

    <LinearLayout
        android:id="@+id/layout_money_sent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">
...
        android:fontFamily="@font/robo_bold"
        android:textColor="@color/darkgrey"
        android:textSize="18dp"
        />
    </LinearLayout>
        <Button
            android:id="@+id/btnBackHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fill_button"
            android:fontFamily="@font/robo_bold"
            android:text="Back to Home"
            android:textAllCaps="false"
...
