...
                app:layout_constraintStart_toStartOf="@+id/centerLayout"
                app:layout_constraintEnd_toEndOf="@+id/centerLayout"
                app:layout_constraintTop_toTopOf="@+id/centerLayout"
                app:layout_constraintBottom_toBottomOf="@+id/centerLayout"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewContacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                tools:listitem="@layout/contact_card"
                app:layout_constraintStart_toStartOf="@+id/centerLayout"
                app:layout_constraintTop_toBottomOf="@+id/txtAllContacts"/>
...
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add"
            android:textSize="18dp"
            android:background="@drawable/fill_button"
            android:fontFamily="@font/robo_bold"
...
