...
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/blue"
                android:layout_gravity="center" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewSplitting"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical"
                    android:scrollbarSize="0dp"
                    tools:listitem="@layout/splitting_card" />

...
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="24dp">
        <Button
            android:id="@+id/d_btnSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Send Request"
            android:drawableRight="@drawable/ic_arrow_forward"
            android:textSize="18dp"
            android:background="@drawable/fill_button"
...
